--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./scripts/rock-paper-scissors.js"></script>
+    <link rel="stylesheet" href="./styles/style.css">
+    <script src="./scripts/rock-paper-scissors.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 
 <body>
-
+    <div class="container">
+        <h1>Play Rock Paper Scissors</h1>
+        <button class="option" id="rock">Rock</button>
+        <button class="option" id="paper">Paper</button>
+        <button class="option" id="scissors">Scissors</button>
+        <div class="results">
+            <div class="rounds">
+                <h3>Round Results</h3>
+            </div>
+            <div class="scores">
+                <p class="score" id="player-score">Player Score: </p>
+                <p class="score" id="computer-score">Computer Score: </p>
+                <p class="score" id="ties">Ties: </p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
