Added functionality to rpunds and scores.
Added function to display rounds results and update scores.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <h3>Round Results</h3>
             </div>
             <div class="scores">
+                <h3>Scores</h3>
                 <p class="score" id="player-score">Player Score: </p>
                 <p class="score" id="computer-score">Computer Score: </p>
                 <p class="score" id="ties">Ties: </p>
