--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1>Play Rock Paper Scissors</h1>
+        <h1 id="title">Play Rock Paper Scissors</h1>
         <button class="option" id="rock">Rock</button>
         <button class="option" id="paper">Paper</button>
         <button class="option" id="scissors">Scissors</button>
